# guide_helper

./: .env.example  .gitignore  FRONTEND_AUTH_PLAN.md  README.md  TODO.md  docker-compose.yml  generate_pz.py  grafana-dashboard.json  Пояснительная_записка.docx  шаблон_титульник.docx
backend/auth/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/auth/migrations/: 20251109203122_users.up.sql  20260125000001_add_profile_fields.down.sql  20260125000001_add_profile_fields.up.sql
backend/auth/src/: main.rs  telemetry.rs
backend/auth/src/config/: mod.rs
backend/auth/src/delivery/: contracts.rs  mod.rs
backend/auth/src/domain/: user.rs
backend/auth/src/repository/: errors.rs  mod.rs
backend/auth/src/usecase/: auth.rs  contracts.rs  jwt.rs  mod.rs  password.rs
backend/photo-worker/: Cargo.toml  Dockerfile
backend/photo-worker/src/: config.rs  domain.rs  main.rs  processing.rs  telemetry.rs
backend/routes/: Cargo.toml  Dockerfile  Dockerfile.build
backend/routes/migrations/: 20260125000001_create_routes.down.sql  20260125000001_create_routes.up.sql  20260211000001_add_share_token.down.sql  20260211000001_add_share_token.up.sql  20260213000001_create_comments.up.sql  20260214000001_create_route_likes.down.sql  20260214000001_create_route_likes.up.sql  20260214000002_create_route_ratings.down.sql  20260214000002_create_route_ratings.up.sql  20260217000001_add_route_tags.down.sql  20260217000001_add_route_tags.up.sql  20260218000001_create_settings.up.sql  20260219000001_create_categories.up.sql  20260219000002_create_notifications.down.sql  20260219000002_create_notifications.up.sql  20260219000003_create_chat_messages.up.sql  20260219000004_add_chat_indexes.down.sql  20260219000004_add_chat_indexes.up.sql  20260220000001_create_route_categories.down.sql  20260220000001_create_route_categories.up.sql  20260221000001_add_route_locations.down.sql  20260221000001_add_route_locations.up.sql  20260224000001_create_route_bookmarks.down.sql  20260224000001_create_route_bookmarks.up.sql  20260224000002_add_route_seasons.down.sql  20260224000002_add_route_seasons.up.sql  20260224000003_add_route_description.down.sql  20260224000003_add_route_description.up.sql
backend/routes/src/: main.rs  telemetry.rs
backend/routes/src/config/: mod.rs
backend/routes/src/domain/: bookmark.rs  category.rs  chat_message.rs  comment.rs  like.rs  mod.rs  notification.rs  rating.rs  route.rs
backend/routes/src/repository/: errors.rs  mod.rs
backend/routes/src/usecase/: bookmarks.rs  categories.rs  chat.rs  comments.rs  contracts.rs  error.rs  geojson_import.rs  jwt.rs  likes.rs  mod.rs  nominatim.rs  ollama.rs  (+6 more)
(+262 files in other folders)
