[package]
name = "routes"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-nats = "0.38"
axum = { version = "0.8.6", features = ["ws"] }
axum-extra = { version = "0.10", features = ["multipart"] }
futures = "0.3"
geojson = "0.24"
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.18"
jsonwebtoken = "9.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sqlx = {version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate", "json"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.29"
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.28"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
metrics-process = "2.3"
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"
